--- a/src/main/res/values-tr/strings.xml
+++ b/src/main/res/values-tr/strings.xml
@@ -630,5 +630,6 @@
     <string name="preload_photo_type_wifi">WiFi sadece</string>
     <string name="preload_photo_type_always_on">Her zaman açık</string>
     <string name="preload_photo_type_preload_off">Kapalı</string>
+    <string name="wrong_time_popup_text">Sunucunuza güveli bir bağlantı kurulamadı/nMuhtemelen tarih ve saat bilgisayarınızda ayarlanmadı.</string>
     <string name="wrong_time_popup_button">Ayarları açın</string>
 </resources>
