--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -117,7 +117,9 @@
     <string name="pincode_auth_input">Sie müssen Login und Passwort eingeben.</string>
     <string name="pincode_will_be_reset">Bei erfolgreicher Autorisierung werden alle App-Einstellungen zurückgesetzt.</string>
     <plurals name="pincode_interval">
+        <item quantity="zero">sofort nach der Schließung</item>
         <item quantity="other">%d Min.</item>
+        <item quantity="one">%d Min.</item>
     </plurals>
     <string name="general_error">FEHLER</string>
     <string name="general_yes">Ja</string>
@@ -127,7 +129,7 @@
     <string name="general_dialog_loading">Ladung</string>
     <string name="general_dialog_saving">Speicherung</string>
     <string name="general_fill_button">Ausfüllen</string>
-    <string name="general_send_full">Senden</string>
+    <string name="general_send_full">Send</string>
     <string name="general_dialog_retry">Wiederholen</string>
     <string name="general_copy_title">Kopieren</string>
     <string name="general_back">Zurück</string>
@@ -141,7 +143,7 @@
     <string name="general_dbl_unread">Ungelesene</string>
     <string name="time_yesterday">Gestern</string>
     <string name="time_today">Heute</string>
-    <string name="general_send_button">Senden</string>
+    <string name="general_send_button">Send</string>
     <string name="general_boys">Männer</string>
     <string name="general_girls">Mädchen</string>
     <string name="general_city">Stadt</string>
@@ -174,17 +176,24 @@
     <string name="chat_sexuality_out">Sie schätzten eine Sexualität.</string>
     <string name="chat_wink_in">Jemand hat Ihnen angestupst.</string>
     <string name="chat_wink_out">Sie haben angestupst.</string>
+    <string name="filter_search">Suche</string>
     <string name="filter_filter">Filter</string>
     <string name="filter_age_string">Von %1$d bis %2$d</string>
     <string name="filter_only_beautiful">Nur schöne</string>
     <string name="filter_extra_parameters">Ergänzende Parameter</string>
     <string name="filter_age">Alter</string>
     <string name="filter_online">On-line</string>
+    <string name="filter_age_start_prefix">Von %s</string>
+    <string name="filter_age_end_prefix">bis %s</string>
     <string name="filter_cities_all">Nach allen Städten</string>
     <string name="buying_header_title">Käufe</string>
     <plurals name="buying_gift_you_need_coins">
         <item quantity="other">Um ein Geschenk zu senden, kaufen Sie noch %d Coins</item>
         <item quantity="one">Um ein Geschenk zu senden, kaufen Sie noch %d Coin</item>
+    </plurals>
+    <plurals name="buying_admiration_you_need_coins">
+        <item quantity="other">Um Bewunderung zu senden, kaufen Sie noch %d Coins</item>
+        <item quantity="one">Um Bewunderung zu senden, kaufen Sie noch %d Coin</item>
     </plurals>
     <plurals name="buying_unlock_likes_you_need_coins">
         <item quantity="other">Um zu sehen, wem Sie gefallen, kaufen Sie noch %d Coins</item>
@@ -193,6 +202,10 @@
     <plurals name="buying_leaders_you_need_coins">
         <item quantity="other">Damit alle Sie gesehen haben, kaufen Sie noch %d Coins</item>
         <item quantity="one">Damit alle Sie gesehen haben, kaufen Sie noch %d Coin</item>
+    </plurals>
+    <plurals name="buying_you_need_coins">
+        <item quantity="other">Sie brauchen %d Coins</item>
+        <item quantity="one">Sie brauchen %d Coins</item>
     </plurals>
     <string name="buying_default_message">Sie können Geschenke und Bewunderungen für Coins senden</string>
     <string name="buying_money">Coins kaufen</string>
@@ -581,6 +594,10 @@
     <string name="measurement_unit_weight">kg.</string>
     <string name="measurement_unit_height">cm.</string>
     <string name="email_changing">E-Mail ändern</string>
+    <string name="pull_to_refresh_refreshing_label">Laden…</string>
     <string name="preload_photo_type_wifi_3g">WiFi und 3G</string>
     <string name="preload_photo_type_wifi">Nur WiFi</string>
+    <string name="wrong_time_popup_button">Einstellungen öffnen</string>
+    <string name="google_service_missing_button">Installieren</string>
+    <string name="google_service_version_update_required_button">Aktualisieren</string>
 </resources>
