--- a/src/main/res/values-es/strings.xml
+++ b/src/main/res/values-es/strings.xml
@@ -621,4 +621,15 @@
     <string name="preload_photo_type_preload_off">Descpnectada</string>
     <string name="wrong_time_popup_text">Ha sido imposible establecer conexión segura con el servidor.\nEs posible que en tu dispositivo están puestas mal las fechas o la hora.</string>
     <string name="wrong_time_popup_button">Abrir opciones</string>
+    <string name="google_service_general_title">Avisos no disponibles</string>
+    <string name="google_service_disabled_title">Tienes desconectados algunos servicios Google Play que hacen falta para que los avisos funcionen.</string>
+    <string name="google_service_disabled_button">Habilitar</string>
+    <string name="google_service_missing_title">No tienes instalados algunos servicios Google Play que hacen falta para que los avisos funcionen.</string>
+    <string name="google_service_missing_button">Instalar</string>
+    <string name="google_service_version_update_required_title">Tienes instalada la antígua versión de los servicios Google Play. Para que los avisos funcionen correctamente, por favor, actualízala.</string>
+    <string name="google_service_version_update_required_button">Actualizar</string>
+    <string name="google_invalid_account_title">Comprueba los datos de tu cuenta Google o comunícate con el servicio técnico de Google.</string>
+    <string name="google_sign_in_account_title">No tienes agregada la cuenta Google, tienes que conectar, si quieres recibir avisos.</string>
+    <string name="google_sign_in_account_button">Conectar</string>
+    <string name="google_unavailable_services_title">Lamentablemente, los avisos no se soportan en tu dispositivo.</string>
 </resources>
