--- a/src/main/res/values-it/strings.xml
+++ b/src/main/res/values-it/strings.xml
@@ -177,6 +177,7 @@
     <string name="chat_sexuality_out">Hai valutato la sessualità.</string>
     <string name="chat_wink_in">Hai ricevuto un occhiolino.</string>
     <string name="chat_wink_out">Hai inviato un occhiolino.</string>
+    <string name="filter_search">Ricerca</string>
     <string name="filter_filter">Filtro</string>
     <string name="filter_age_string">Da %1$d a %2$d</string>
     <string name="filter_only_beautiful">Solo belle</string>
@@ -617,4 +618,15 @@
     <string name="preload_photo_type_preload_off">Spenta</string>
     <string name="wrong_time_popup_text">Non siamo riusciti a stabilire una connessione sicura.\nProbabilmente il tuo dispositivo mostra una data o l’ora scorretta.</string>
     <string name="wrong_time_popup_button">Aprire i parametri</string>
+    <string name="google_service_general_title">Notifiche non disponibili</string>
+    <string name="google_service_disabled_title">Hai disabilitato i Servizi Google Play che servono per il corretto funzionamento di notifiche.</string>
+    <string name="google_service_disabled_button">Abilita</string>
+    <string name="google_service_missing_title">Non hai installato i Servizi Google Play che servono per il corretto funzionamento di notifiche.</string>
+    <string name="google_service_missing_button">Installare</string>
+    <string name="google_service_version_update_required_title">Hai una versione vecchia di Servizi Google Play, per il corretto funzionamento di notifiche si prega di aggiornarla.</string>
+    <string name="google_service_version_update_required_button">Aggiornare</string>
+    <string name="google_invalid_account_title">Controlla i dati del tuo account Google oppure scrivi al supporto tecnico di Google.</string>
+    <string name="google_sign_in_account_title">Non hai aggiunto l’account Google, devi accedervi per ricevere le notifiche.</string>
+    <string name="google_sign_in_account_button">Accedere</string>
+    <string name="google_unavailable_services_title">Purtroppo il tuo dispositivo non supporta l’invio di notifiche.</string>
 </resources>
