--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="dating_switch_button">More…</string>
     <string name="dating_prev_button">Previous</string>
     <string name="dating_chat_button">Chat</string>
-    <string name="waiting_a_products">Please hold on. We are loading the available products.</string>
+    <string name="waiting_a_products">Please hold on. We are loading the available products</string>
     <string name="likes_background_text">No likes</string>
     <string name="visitors_background_text">No guests</string>
     <string name="chat_background_text">No incoming messages</string>
@@ -209,7 +209,7 @@
         <item quantity="one">You are short of %d coin</item>
     </plurals>
     <string name="buying_default_message">You can send gifts and admirations with coins</string>
-    <string name="buying_money">Coins purchase</string>
+    <string name="buying_money">Purchase coins</string>
     <string name="gifts_romantic">Romance</string>
     <string name="gifts_friends">Friendship</string>
     <string name="gifts_present">Congratulations</string>
@@ -217,7 +217,7 @@
     <string name="gifts_send_btn">Send a gift</string>
     <string name="profile_header_title">My profile</string>
     <string name="album_add_photo_title">Add a photo</string>
-    <string name="profile_add_album">Choose from available ones</string>
+    <string name="profile_add_album">Choose from the library</string>
     <string name="profile_add_camera">Take a photo</string>
     <string name="profile_photo">Photo</string>
     <string name="profile_form">Profile form</string>
@@ -325,7 +325,7 @@
     <string name="black_list_title">Blacklist</string>
     <string name="black_list_empty">Your blacklist is empty.</string>
     <string name="black_list_delete">Delete from the blacklist</string>
-    <string name="vip_buy_vip">Purchase of VIP-status</string>
+    <string name="vip_buy_vip">Purchase VIP-status</string>
     <string name="vip_state_off">Your VIP-status is not activated.</string>
     <string name="vip_info_guest">Find out who got interested in you - view your guests!</string>
     <string name="vip_info_invisible">Stay hidden while visiting others\' pages with invisibility mode.</string>
@@ -333,13 +333,13 @@
     <string name="vip_info_blackList">Get rid of pesky persons with the help of  the \"Blacklist\"</string>
     <string name="vip_info_vip">With a VIP-status you will stand out of the crowd in the \"dating\" section, as well as in your profile.</string>
     <string name="buying_vip_status">Buy VIP-status</string>
-    <string name="buy_play_market_not_available">Play Market is not available.</string>
+    <string name="buy_play_market_not_available">Play Market is not available</string>
     <string name="edit_my_city">My city</string>
     <string name="settings_feedback_email">Enter your email to get a reply from us.</string>
     <string name="settings_invalid_email">Invalid email</string>
     <string name="chat_write_message">Write a message</string>
     <string name="dating_message">Message…</string>
-    <string name="buying_sympathies">Likes purchase</string>
+    <string name="buying_sympathies">Purchase likes</string>
     <string name="novice_sympathies_bonus">You are getting %1$d likes as a gift! It means that %2$d people will give you a like and they\'ll mean it.</string>
     <string name="novice_buy_sympathies">If you want to be sure that\nyou\'ll get likes,\nbuy them right now!</string>
     <string name="general_reconnect_social">Cannot connect to the social network. Please try again later.</string>
@@ -489,7 +489,7 @@
     <string name="general_complain_sended">Your complaint has been submitted, much thanks for your help.</string>
     <string name="general_complain">Complaint</string>
     <string name="general_msg">Message</string>
-    <string name="general_no_notifications">Unfortunately, the notifications on your device are not available.</string>
+    <string name="general_no_notifications">Unfortunately, the notifications on your device are not available</string>
     <string name="black_list_add_short">To the blacklist</string>
     <string name="confirm_email_for_dating">We are against spam. Please confirm your email, so that you can meet people in Topface!</string>
     <string name="send_confirm_link">Send a link for confirmation</string>
@@ -527,8 +527,8 @@
         <item quantity="one">%d likes</item>
     </plurals>
     <plurals name="popup_vip_messages">
-        <item quantity="other">Received %d messages with express delivery</item>
-        <item quantity="one">Received %d message with express delivery</item>
+        <item quantity="other">You have %d new express delivery messages</item>
+        <item quantity="one">You have %d new express delivery message</item>
     </plurals>
     <plurals name="popup_vip_visitors">
         <item quantity="few">You have %d visitors</item>
@@ -622,4 +622,15 @@
     <string name="preload_photo_type_preload_off">Off</string>
     <string name="wrong_time_popup_text">Cannot establish a safe connection.\nMaybe the date or time settings on your device have been set incorrectly.</string>
     <string name="wrong_time_popup_button">View settings</string>
+    <string name="google_service_general_title">Reminders are not available</string>
+    <string name="google_service_disabled_title">You have Google Play disabled. You need to enable it to receive reminders.</string>
+    <string name="google_service_disabled_button">Enable</string>
+    <string name="google_service_missing_title">You don\'t have Google Play installed. You need to install it to receive reminders.</string>
+    <string name="google_service_missing_button">Install</string>
+    <string name="google_service_version_update_required_title">Your version of Google Play is outdated. For the reminders to function correctly, please, renew it.</string>
+    <string name="google_service_version_update_required_button">Update</string>
+    <string name="google_invalid_account_title">Check your Google account details or contact Google technical support.</string>
+    <string name="google_sign_in_account_title">Your Google account has not been added. You have to sign in, if you want to receive reminders.</string>
+    <string name="google_sign_in_account_button">Sign in</string>
+    <string name="google_unavailable_services_title">Unfortunately, the remainders are not available on your device.</string>
 </resources>
