--- a/src/main/res/values-tr/strings.xml
+++ b/src/main/res/values-tr/strings.xml
@@ -368,6 +368,7 @@
     <string name="popup_version_cancel">Daha sonra hatırlat</string>
     <string name="general_version_not_supported">Uygulamanızın versiyonu eskimiş ve artık desteklenmiyor. Lütfen, uygulamayı güncelleyin</string>
     <string name="default_price_format">Toplam: %.2f USD</string>
+    <string name="default_price_format_extended">Toplam: %1$.2f %2$s</string>
     <string name="dating_online_only">%s, sadece çevrimiçi</string>
     <string name="leaders_pick_condition">%d%% reytinginden daha aşağı foto seçemezsiniz:</string>
     <string name="general_gift">Hediye</string>
@@ -614,6 +615,8 @@
     <string name="billing_item_already_owned">Önceki satım alınınız uygulanıyor lütfen bekleyiniz</string>
     <string name="dialog">Sohbet</string>
     <string name="reply">Cevap vermek</string>
+    <string name="measurement_unit_weight">kl</string>
+    <string name="measurement_unit_height">sm</string>
     <string name="maximum_number_of_users">Maksimum kullanıcı sayısını seçildi</string>
     <string name="logout_if_email_already_registred">Böyle bir e-posta adresi kullanılıyor.Eğer sizin e-postanız ise şu anki hesabınızdan çıkıp  %s hesaba bağlanın.</string>
     <string name="recover_password_instructions">Şifrenizi kurtarmak ile alakalı talimatları içeren bir mesajı e-postanıza yolladık</string>
