--- a/src/main/res/values-hu/strings.xml
+++ b/src/main/res/values-hu/strings.xml
@@ -228,5 +228,6 @@
     <string name="default_price_format">Összesen: %.2f USD</string>
     <string name="general_gift">Ajándék</string>
     <string name="profile_edit_age_ranges">Az életkornak 16 és 99 év között kell lennie. Kérjük, add meg a helyes értéket, és próbáld újra.</string>
+    <string name="notifications">Értesítés</string>
     <string name="auth_btn_ok">Bejelentkezés a Odnoklassniki-n</string>
 </resources>
